k8s/04-statefulset-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: medibook-db
  namespace: hospital
spec:
  serviceName: medibook-db
  replicas: 1
  selector:
    matchLabels:
      app: medibook-db
  template:
    metadata:
      labels:
        app: medibook-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - medibook
                - -d
                - medibook
            initialDelaySeconds: 5
            periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
