k8s/06-deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medibook-api
  namespace: hospital
spec:
  replicas: 2
  selector:
    matchLabels:
      app: medibook-api
  template:
    metadata:
      labels:
        app: medibook-api
    spec:
      containers:
        - name: api
          image: medibook-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /api/doctors
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/doctors
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
