k8s/08-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medibook-frontend
  namespace: hospital
spec:
  replicas: 2
  selector:
    matchLabels:
      app: medibook-frontend
  template:
    metadata:
      labels:
        app: medibook-frontend
    spec:
      containers:
        - name: frontend
          image: medibook-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
