k8s/05-service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: medibook-db
  namespace: hospital
spec:
  clusterIP: None
  selector:
    app: medibook-db
  ports:
    - port: 5432
      targetPort: 5432
