k8s/07-service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: medibook-api
  namespace: hospital
spec:
  selector:
    app: medibook-api
  ports:
    - port: 5000
      targetPort: 5000
