k8s/09-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: medibook-frontend
  namespace: hospital
spec:
  selector:
    app: medibook-frontend
  ports:
    - port: 80
      targetPort: 80
