k8s/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medibook-ingress
  namespace: hospital
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: hopital.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medibook-frontend
                port:
                  number: 80
